fix: migrate to lints，update project name: "dart_git_hooks"

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,5 @@
-include: package:pedantic/analysis_options.1.9.0.yaml
+include: package:lints/recommended.yaml
+
 # https://dart-lang.github.io/linter/lints/
 analyzer:
   exclude:
@@ -8,7 +9,9 @@ analyzer:
     unused_import: warning
     unused_local_variable: warning
     public_member_api_docs: warning
+
 linter:
   rules:
+    hash_and_equals: false
     public_member_api_docs: true
     # - package_api_docs
