--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: git_hooks
+name: dart_git_hooks
 description: Using dart to prevents bad commit or push (git hooks, pre-commit/precommit, pre-push/prepush, post-merge/postmerge and all that stuff...).It is similar to husky.
-version: 0.1.3-nullsafety.0
-homepage: https://github.com/xuzhongpeng/git_hooks
+version: 0.2.0
+homepage: https://github.com/IAMSUPERMONKEY/git_hooks
 
 
 environment:
@@ -12,7 +12,8 @@ dependencies:
   yaml: ^3.1.0
 
 dev_dependencies:
-  pedantic: ^1.11.0
+  lints: ^1.0.1
   test: ^1.17.12
+
 executables:
   git_hooks:
