--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: dart_git_hooks
 description: Using dart to prevents bad commit or push (git hooks, pre-commit/precommit, pre-push/prepush, post-merge/postmerge and all that stuff...).It is similar to husky.
-version: 0.2.2
+version: 0.2.3
 homepage: https://github.com/IAMSUPERMONKEY/git_hooks
 
 
@@ -17,4 +17,4 @@ dev_dependencies:
   test: ^1.17.12
 
 executables:
-  git_hooks:
+  dart_git_hooks:
