--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: dart_git_hooks
 description: Using dart to prevents bad commit or push (git hooks, pre-commit/precommit, pre-push/prepush, post-merge/postmerge and all that stuff...).It is similar to husky.
-version: 0.2.4
+version: 0.2.4+1
 homepage: https://github.com/IAMSUPERMONKEY/git_hooks
 
 
@@ -11,6 +11,8 @@ dependencies:
   path: ^1.8.0
   yaml: ^3.1.0
   meta: ^1.7.0
+  args: ^2.1.1
+  cli_util: ^0.3.0
 
 dev_dependencies:
   lints: ^1.0.1
